@@ -1,0 +1,20 @@
+#!/bin/sh
+
+# Check that ratfor does not overwrite its output file if the opening of
+# the input file fails
+
+. ./defs.sh || exit 99
+
+mkdir tst.out
+echo 'saved' > safe
+cp safe risky
+
+test ! -f none.r
+
+run_RATFOR -e 1 -- -o risky none.r || testcase_FAIL
+cat risky
+$DIFF_U safe risky || { (echo '~~~~~') 2>/dev/null; testcase_FAIL; }
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
